Fix responsive for mobile device & change pdf

--- a/front/assets/my_style/components/header.scss
+++ b/front/assets/my_style/components/header.scss
@@ -2,7 +2,7 @@ header{
   padding: 16px;
   background: $color-white;
   z-index: 999;
-  position: fixed;
+  // position: fixed;
   top: 0;
   left: 0;
   right: 0;
