--- a/front/assets/my_style/components/side-bar.scss
+++ b/front/assets/my_style/components/side-bar.scss
@@ -1,7 +1,7 @@
 .b-sidebar {
   position: fixed;
   height: 100%;
-  width: 320px;
+  max-width: 320px;
   background: $color-white;
   box-shadow: 12px 0px 18px rgba(0, 0, 0, 0.06);
   min-height: 100vh;
